--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div id="ヘッダー">
 	<div class="header">
-		<h1><img src="src/logo.png" width="30%" alt="natom.work Official Site"></h1>
+		<h1><img src="logo.png" width="30%" alt="natom.work Official Site"></h1>
 		<p>Official web site of Natom; video editor/WEB Designer<br>
 		<a href="#自己紹介">Profile</a>　 <a href="#works">Works</a>　 <a href="#Contact">Contact</a>
 			</p>
@@ -29,7 +29,7 @@
 		<div id="自己紹介">
 		<div id="title">
 			<h2>Profile</h2>
-						<img src="src/natom.png" alt="自画像" width="20%">
+						<img src="natom.png" alt="自画像" width="20%">
 			</div>
 			<div id="bunshou">
 				<p>2003年 愛知県名古屋市生まれ
@@ -54,7 +54,7 @@
 	</div>
 	<div id="bunshou3">
 		<p>私どもは，初回連絡はEメール経由のみ受け付けております。<br>次のアドレスまでお願いいたします。</p>
-		<img src="src/mail.png" width="30%" alt="info[at]natom.work([at]はアットマークへ)"><p>(迷惑メール対策のためアドレスを画像化しています。)</p>
+		<img src="mail.png" width="30%" alt="info[at]natom.work([at]はアットマークへ)"><p>(迷惑メール対策のためアドレスを画像化しています。)</p>
 		<br>
 		</div>
 	</div>
